--- a/exercios/ex022/fundo.html
+++ b/exercios/ex022/fundo.html
@@ -12,7 +12,7 @@
     </style>
     <!-- temos tambem o: background-repeat: repeat; que vai repetir as imagens.
     background-repeat: repeat x; que vai repetir para o lado.
-    background-repeat: repeat y; que vai repetir para baixo 
+    background-repeat: repeat y; que vai repetir para baixo -->
 </head>
 <body>
     
